# fastapi-template

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: items.py
app/core/: config.py
app/db/: session.py
app/schemas/: item.py
app/services/: item_service.py
migrations/: env.py
migrations/versions/: c46bac946cba_create_item_table.py
